--- a/blog/settings.toml
+++ b/blog/settings.toml
@@ -9,5 +9,5 @@ EXTENSIONS = [
     "blog.views:configure",
     "blog.plugins:configure",
     "blog.auth:configure",
-
+    "blog.admin:configure",
 ]
